@startuml
class ReflectableEnumAttribute <<sealed>> {
    + ReflectableEnumAttribute(reflectableType:Type, argTypes:Type[]?)
    + ReflectableEnumAttribute(typeName:string, argTypes:Type[]?)
    + ReflectableEnumAttribute(assemblyName:string, typeName:string, argTypes:Type[]?)
}
class ReflectableEnum <<static>> {
    + {static} Reflection(value:Enum, args:object?[]) : T?
}
class "IEnumerable`1"<T> {
}
Attribute <|-- ReflectableEnumAttribute
ReflectableEnumAttribute --> "ReflectableType" Type
ReflectableEnumAttribute --> "ArgTypes<Type>" "IEnumerable`1"
@enduml
